--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 
 {
-  "name": "final-account-site",
+  "name": "final-js-account-site",
   "version": "1.0.0",
   "scripts": {
     "dev": "next dev",
@@ -13,9 +13,8 @@
     "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "autoprefixer": "^10.4.14",
-    "postcss": "^8.4.21",
     "tailwindcss": "^3.3.2",
-    "typescript": "^5.1.6"
+    "autoprefixer": "^10.4.14",
+    "postcss": "^8.4.21"
   }
 }
